# sysquery

./: 0Temp.c  install.sh  main.c  meson.build  pkg_dev.c  pkg_dev.h  prc_query.c  prc_query.h  query.c  query.h  str_ext.c  str_ext.h  svc_query.c  svc_query.h  sysquery.pro
